--- a/MLR.ipynb
+++ b/MLR.ipynb
@@ -537,8 +537,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "bba39425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x =  df[['Avg. Session Length', 'Time on App','Time on Website','Length of Membership']]\n",
+    "y = df['Yearly Amount Spent']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=42) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6959cbc6",
    "metadata": {},
    "outputs": [],
    "source": []
