Interpreting the Coefficients

--- a/MLR.ipynb
+++ b/MLR.ipynb
@@ -1174,8 +1174,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "3afc667c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([25.72425621, 38.59713548,  0.45914788, 61.67473243])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lm.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "e1616fd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Coef</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Avg. Session Length</th>\n",
+       "      <td>25.724256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Time on App</th>\n",
+       "      <td>38.597135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Time on Website</th>\n",
+       "      <td>0.459148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Length of Membership</th>\n",
+       "      <td>61.674732</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Coef\n",
+       "Avg. Session Length   25.724256\n",
+       "Time on App           38.597135\n",
+       "Time on Website        0.459148\n",
+       "Length of Membership  61.674732"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cdf = pd.DataFrame(lm.coef_, X.columns, columns= ['Coef']) # y = Bo + B1x1 + B2x2 + B3x3 + B4x4.... Equation of Multiple Linear Regression\n",
+    "cdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "844ac5dd",
    "metadata": {},
    "outputs": [],
    "source": []
