--- a/MLR.ipynb
+++ b/MLR.ipynb
@@ -1264,11 +1264,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "844ac5dd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predictions = lm.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1fb250f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([403.66993069, 542.57756289, 427.06591658, 502.02460425,\n",
+       "       410.12143559, 569.93442508, 531.93431341, 506.29650969,\n",
+       "       408.71870658, 473.97737105, 441.46912726, 425.33703059,\n",
+       "       425.1297229 , 527.61676714, 431.45684016, 424.0769184 ,\n",
+       "       575.76543296, 484.89856554, 458.35936863, 481.96502182,\n",
+       "       502.32441491, 513.63783554, 507.58877002, 646.57464283,\n",
+       "       450.24372141, 496.27043415, 556.40457807, 554.95630839,\n",
+       "       399.64237199, 325.84623136])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions[:30] # first 30 predictions"
+   ]
   }
  ],
  "metadata": {
