--- a/MLR.ipynb
+++ b/MLR.ipynb
@@ -1335,8 +1335,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "703f5e70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "22fa4485",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 8.426091641432116\n",
+      "Mean Squared Error: 103.91554136503333\n",
+      "Root Mean Squared Error(RMSE): 10.193897260863155\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Mean Absolute Error: {mean_absolute_error(y_test, predictions)}\")\n",
+    "print(f\"Mean Squared Error: {mean_squared_error(y_test, predictions)}\")\n",
+    "print(f\"Root Mean Squared Error(RMSE): {math.sqrt(mean_squared_error(y_test, predictions))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ba95a87",
    "metadata": {},
    "outputs": [],
    "source": []
